# local-agent

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
data/: agent.db  agent.db-shm  mx_skills_quota.json
data/canvas/: 2d11ba95-fc84-4123-b2d8-d57f209754f5.mmd  85587389-8d79-4265-bd1c-567a4bb056d1.mmd  d75713d0-afb5-49e2-882c-ad352701f28e.mmd
docs/: DESIGN.md
skills/_builtin/daytona_sandbox/: SKILL.md  sandbox_manager.py  tools.py
skills/_builtin/job_scheduler/: SKILL.md  tools.py
skills/_builtin/skill_studio/: SKILL.md  _skill_runner.py  tools.py
skills/_builtin/system_context/: SKILL.md  tools.py
skills/_builtin/web_search/: SKILL.md  http_client.py  page_parser.py  tools.py
skills/custom/code_review/: SKILL.md  tools.py
skills/custom/excel_tool/: SKILL.md  tools.py
skills/custom/md_to_pdf/: SKILL.md  requirements.txt  tools.py
skills/custom/python_security_auditor/: SKILL.md
src/local_agent/: __init__.py  __main__.py  main.py
src/local_agent/agent/: __init__.py  background_loop.py  exceptions.py  manager.py  models.py  resolvers.py  runtime.py  skill_allowlist.py  system_directives.py  system_prompt.py  thread_config.py  thread_title.py
src/local_agent/api/: app.py  artifact_preview.py  config_utils.py  deps.py  schemas.py
src/local_agent/artifacts/: __init__.py  extract.py  file_preview.py  manager.py  models.py
src/local_agent/cli/: __init__.py  app.py  artifacts_display.py  context.py  history_display.py  repl.py  slash.py
src/local_agent/compat/: __init__.py  windows.py
src/local_agent/config/: __init__.py  loader.py  models.py
src/local_agent/integrations/: daytona_sandbox.py  skill_runtime.py
(+69 files in other folders)
